--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <body>
 <h1 style="color: rgb(145, 121, 85);">FREE PALESTINE ASSALAMALAIKUM</h1>
 <p style="color: darkgoldenrod;">palestine need help we need to free palestine from israel and they can share</p>  
-<img src=""></body>
+<img src="https://upload.wikimedia.org/wikipe
+dia/commons/thumb/0/00/Flag_of_Palestine.svg/125px-Flag_of_Palestine.svg.png"></body>
 <style>
- body{background-image:url("https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Flag_of_Palestine.svg/125px-Flag_of_Palestine.svg.png")
-  ;} body{background-repeat: no-repeat;}
+ body{text-align: center; font-family: cursive;}
+ img {display: block; margin-right: auto;
+  margin-left: auto;}
 </style>
 
 
